--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-<div class="language-switcher">
+    <!-- <div class="language-switcher">
   <button id="language-toggle" class="lang-btn" data-lang="ru">EN</button>
-</div>
+</div> -->
     <!-- Hero Section -->
     <section class="hero" id="home">
       <div class="hero-slider">
@@ -101,12 +101,17 @@
         <h2 class="section-title text-center">PANZZi</h2>
         <div class="about-content">
           <div class="about-text">
-            <p data-translate="about-text-1">
-              Мы — команда с 20-летним опытом в F&B сфере. Этот опыт помогает нам
-              не просто поставлять мебель, посуду, свет и строительные
-              материалы, но и глубоко понимать, чего действительно хотят наши
-              клиенты. Мы знаем, как важно подобрать правильное решение, которое
-              будет не только красиво выглядеть, но и работать на ваш бизнес.
+            <p data-translate="">
+              20 лет в F&B - от ресторанного бизнеса до оснащения пространств.
+            </p>
+            <p data-translate="">
+              Мы знаем, как каждое решение влияет на повседневную работу,
+              атмосферу и восприятие бренда.
+            </p>
+            <p data-translate="">
+              Сегодня мы помогаем ресторанам, отелям, виллам и частным проектам
+              по всему миру - поставляя мебель, посуду, освещение и строительные
+              материалы напрямую от проверенных производителей в Китае.
             </p>
             <div style="margin-top: 30px">
               <a href="#contacts" class="btn" data-translate="contact-us"
@@ -203,232 +208,192 @@
     </div>
 
     <!-- Projects Section -->
-<section class="projects" id="projects">
-  <div class="container">
-    <span class="section-subtitle text-center">Наши работы</span>
-    <h2 class="section-title text-center">Реализованные проекты</h2>
-    <div class="projects-container">
-      <!-- Project 1 - Lazy Bar -->
-      <div class="project-item">
-        <div class="project-image">
-          <img
-            src="content/projects/lazy_bar/photo_1_2025-07-07_12-58-50.jpg"
-            alt="Lazy Bar"
-          />
-        </div>
-        <div class="project-info">
-          <span class="project-category">Бар</span>
-          <h3 class="project-title">Lazy Bar</h3>
-          <p class="project-description">
-            Полное оснащение бара под ключ: отделочные материалы, мебель и посуда.
-            Создали уютную атмосферу для отдыха и общения.
-          </p>
-          <div class="project-features">
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Индивидуальный подбор материалов</span>
+    <section class="projects" id="projects">
+      <div class="container">
+        <span class="section-subtitle text-center">Наши работы</span>
+        <h2 class="section-title text-center">Реализованные проекты</h2>
+        <div class="projects-container">
+          <!-- Project 1 - Lazy Bar -->
+          <div class="project-item">
+            <div class="project-image">
+              <img
+                src="content/projects/lazy_bar/photo_1_2025-07-07_12-58-50.jpg"
+                alt="Lazy Bar"
+              />
             </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Эргономичная барная мебель</span>
-            </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Специальная барная посуда</span>
+            <div class="project-info">
+              <span class="project-category">Бар</span>
+              <h3 class="project-title">Lazy Bar</h3>
+              <p class="project-description">
+                Полное оснащение бара под ключ: отделочные материалы, мебель и
+                посуда. Создали уютную атмосферу для отдыха и общения.
+              </p>
+              <div class="project-features">
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Индивидуальный подбор материалов</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Эргономичная барная мебель</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Специальная барная посуда</span>
+                </div>
+              </div>
+              <a class="project-link btn-gallery" data-gallery="lazy_bar"
+                >Подробнее о проекте <i class="fas fa-arrow-right"></i
+              ></a>
             </div>
           </div>
-          <a class="project-link btn-gallery" data-gallery="lazy_bar"
-            >Подробнее о проекте <i class="fas fa-arrow-right"></i
-          ></a>
-        </div>
-      </div>
 
-      <!-- Project 2 - MOM ресторан -->
-      <div class="project-item">
-        <div class="project-image">
-          <img
-            src="content/projects/mom_restaurant/photo_6_2025-07-07_12-59-31.jpg"
-            alt="MOM ресторан"
-          />
-        </div>
-        <div class="project-info">
-          <span class="project-category">Ресторан</span>
-          <h3 class="project-title">MOM ресторан в Шанхае</h3>
-          <p class="project-description">
-            Комплексное оснащение ресторана под ключ: материалы, мебель и посуда.
-            Уникальный дизайн и функциональное пространство.
-          </p>
-          <div class="project-features">
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Премиальные отделочные материалы</span>
+          <!-- Project 2 - MOM ресторан -->
+          <div class="project-item">
+            <div class="project-image">
+              <img
+                src="content/projects/mom_restaurant/photo_6_2025-07-07_12-59-31.jpg"
+                alt="MOM ресторан"
+              />
             </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Авторская мебель ручной работы</span>
-            </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Эксклюзивная фарфоровая посуда</span>
+            <div class="project-info">
+              <span class="project-category">Ресторан</span>
+              <h3 class="project-title">MOM ресторан в Шанхае</h3>
+              <p class="project-description">
+                Комплексное оснащение ресторана под ключ: материалы, мебель и
+                посуда. Уникальный дизайн и функциональное пространство.
+              </p>
+              <div class="project-features">
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Премиальные отделочные материалы</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Авторская мебель ручной работы</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Эксклюзивная фарфоровая посуда</span>
+                </div>
+              </div>
+              <a class="project-link btn-gallery" data-gallery="mom_restaurant"
+                >Подробнее о проекте <i class="fas fa-arrow-right"></i
+              ></a>
             </div>
           </div>
-          <a class="project-link  btn-gallery" data-gallery="mom_restaurant"
-            >Подробнее о проекте <i class="fas fa-arrow-right"></i
-          ></a>
-        </div>
-      </div>
 
-      <!-- Project 3 - Showroom Panzzi -->
-      <div class="project-item">
-        <div class="project-image">
-          <img
-            src="content/projects/panzzi_showroom/photo_7_2025-07-07_13-00-12.jpg"
-            alt="Showroom Panzzi"
-          />
-        </div>
-        <div class="project-info">
-          <span class="project-category">Шоурум</span>
-          <h3 class="project-title">Showroom Panzzi в Шанхае</h3>
-          <p class="project-description">
-            Оснащение шоурума: материалы, мебель, освещение и посуда.
-            Современное пространство для демонстрации продукции.
-          </p>
-          <div class="project-features">
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Современные отделочные материалы</span>
+          <!-- Project 3 - Showroom Panzzi -->
+          <div class="project-item">
+            <div class="project-image">
+              <img
+                src="content/projects/panzzi_showroom/photo_7_2025-07-07_13-00-12.jpg"
+                alt="Showroom Panzzi"
+              />
             </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Дизайнерское освещение</span>
-            </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Фирменная мебель и посуда</span>
+            <div class="project-info">
+              <span class="project-category">Шоурум</span>
+              <h3 class="project-title">Showroom Panzzi в Шанхае</h3>
+              <p class="project-description">
+                Оснащение шоурума: материалы, мебель, освещение и посуда.
+                Современное пространство для демонстрации продукции.
+              </p>
+              <div class="project-features">
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Современные отделочные материалы</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Дизайнерское освещение</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Фирменная мебель и посуда</span>
+                </div>
+              </div>
+              <a class="project-link btn-gallery" data-gallery="panzzi_showroom"
+                >Подробнее о проекте <i class="fas fa-arrow-right"></i
+              ></a>
             </div>
           </div>
-          <a class="project-link  btn-gallery" data-gallery="panzzi_showroom"
-            >Подробнее о проекте <i class="fas fa-arrow-right"></i
-          ></a>
-        </div>
-      </div>
 
-      <!-- Project 4 - Вилла -->
-      <div class="project-item">
-        <div class="project-image">
-          <img
-            src="content/projects/villa_project/villa_project1.jpg"
-            alt="Вилла"
-          />
-        </div>
-        <div class="project-info">
-          <span class="project-category">Вилла</span>
-          <h3 class="project-title">Частная вилла</h3>
-          <p class="project-description">
-            Оснащение виллы: мебель и плитка для интерьера.
-            Элегантное сочетание комфорта и роскоши.
-          </p>
-          <div class="project-features">
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Эксклюзивная мебель на заказ</span>
+          <!-- Project 4 - Вилла -->
+          <div class="project-item">
+            <div class="project-image">
+              <img
+                src="content/projects/villa_project/villa_project1.jpg"
+                alt="Вилла"
+              />
             </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Премиальная плитка и материалы</span>
-            </div>
-            <div class="project-feature">
-              <i class="fas fa-check-circle"></i>
-              <span>Индивидуальный дизайн</span>
+            <div class="project-info">
+              <span class="project-category">Вилла</span>
+              <h3 class="project-title">Частная вилла</h3>
+              <p class="project-description">
+                Оснащение виллы: мебель и плитка для интерьера. Элегантное
+                сочетание комфорта и роскоши.
+              </p>
+              <div class="project-features">
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Эксклюзивная мебель на заказ</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Премиальная плитка и материалы</span>
+                </div>
+                <div class="project-feature">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Индивидуальный дизайн</span>
+                </div>
+              </div>
+              <a class="project-link btn-gallery" data-gallery="villa_project"
+                >Подробнее о проекте <i class="fas fa-arrow-right"></i
+              ></a>
             </div>
           </div>
-          <a class="project-link  btn-gallery" data-gallery="villa_project"
-            >Подробнее о проекте <i class="fas fa-arrow-right"></i
-          ></a>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Why Choose Us Section -->
     <section class="why-choose-us" id="why-choose-us">
       <div class="container">
         <span class="section-subtitle text-center animate fade-in"
-          >Наши преимущества</span
+          >Наш подход</span
         >
         <h2 class="section-title text-center animate fade-in delay-1">
           Почему выбирают PANZZi
         </h2>
 
-        <div class="advantages-grid">
-          <!-- Card 1 -->
-          <div class="advantage-card animate fade-in-up delay-1">
-            <div class="card-icon">
-              <svg viewBox="0 0 24 24">
-                <path
-                  fill="currentColor"
-                  d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                />
-              </svg>
-            </div>
-            <h3>Профессиональный контроль</h3>
-            <p>
-              Полный контроль качества на всех этапах производства на фабриках
-              Китая
-            </p>
-            <div class="card-number">01</div>
-          </div>
-
-          <!-- Card 2 -->
-          <div class="advantage-card animate fade-in-up delay-2">
-            <div class="card-icon">
-              <svg viewBox="0 0 24 24">
-                <path
-                  fill="currentColor"
-                  d="M12,3A4,4 0 0,1 16,7A4,4 0 0,1 12,11A4,4 0 0,1 8,7A4,4 0 0,1 12,3M12,13C16.42,13 20,14.79 20,17V20H4V17C4,14.79 7.58,13 12,13Z"
-                />
-              </svg>
-            </div>
-            <h3>1000+ довольных клиентов</h3>
-            <p>
-              Работаем с клиентами из России, ОАЭ, Украины, Таиланда и Китая
-            </p>
-            <div class="card-number">02</div>
-          </div>
-
-          <!-- Card 3 -->
-          <div class="advantage-card animate fade-in-up delay-3">
-            <div class="card-icon">
-              <svg viewBox="0 0 24 24">
-                <path
-                  fill="currentColor"
-                  d="M12,15A2,2 0 0,1 14,17A2,2 0 0,1 12,19A2,2 0 0,1 10,17A2,2 0 0,1 12,15M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1Z"
-                />
-              </svg>
-            </div>
-            <h3>Широкий ассортимент</h3>
-            <p>Мебель, свет, посуда, уличное и профессиональное оборудование</p>
-            <div class="card-number">03</div>
-          </div>
-
-          <!-- Card 4 -->
-          <div class="advantage-card animate fade-in-up delay-4">
-            <div class="card-icon">
-              <svg viewBox="0 0 24 24">
-                <path
-                  fill="currentColor"
-                  d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.8,8.1 14.8,9.5V11C15.4,11 16,11.6 16,12.3V15.8C16,16.4 15.4,17 14.7,17H9.2C8.6,17 8,16.4 8,15.7V12.2C8,11.6 8.6,11 9.2,11V9.5C9.2,8.1 10.6,7 12,7M12,8.2C11.2,8.2 10.5,8.7 10.5,9.5V11H13.5V9.5C13.5,8.7 12.8,8.2 12,8.2Z"
-                />
-              </svg>
-            </div>
-            <h3>Индивидуальные решения</h3>
-            <p>Создаем уникальные предметы интерьера по вашим проектам</p>
-            <div class="card-number">04</div>
-          </div>
+        <div class="reasons-list animate fade-in delay-2">
+          <ul>
+            <li>Качество фабрик, с которыми работаем — проверено годами</li>
+            <li>
+              Продукты — не из масс-маркета, а из профессионального сегмента
+            </li>
+            <li>
+              Мы не соревнуемся по цене, мы выигрываем по соотношению
+              "качество–ценность"
+            </li>
+            <li>
+              Знаем, где не стоит экономить — и где можно оптимизировать без
+              потери уровня
+            </li>
+            <li>Цена разумная. Качество — выше ожиданий</li>
+            <li>Мы не самые дешёвые — и в этом наше преимущество</li>
+            <li>То же качество, что в Европе. Только ближе и быстрее</li>
+            <li>
+              Умные решения: достойные материалы, уверенные поставки, реальный
+              контроль
+            </li>
+            <li>Для тех, кто ценит эстетику, надёжность и грамотный подход</li>
+            <li>Оснащение, которое работает на репутацию</li>
+            <li>С нами вы не переплатите за бренд, но получите уровень</li>
+          </ul>
         </div>
 
-        <div class="cta-box animate fade-in delay-5">
+        <div class="cta-box animate fade-in delay-3">
           <div class="cta-content">
             <h3>Готовы создать что-то уникальное?</h3>
             <p>
