--- a/clients.html
+++ b/clients.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PANZZi - Информация для клиентов</title>
+    <title data-translate="clients-page-title">PANZZi - Информация для клиентов</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,9 +17,12 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
+        <div class="language-switcher">
+  <button id="language-toggle" class="lang-btn" data-lang="ru">EN</button>
+</div>
     <!-- Hero Section -->
     <section class="hero clients-hero">
-              <div class="hero-slider">
+      <div class="hero-slider">
         <div
           class="hero-slide active"
           style="
@@ -44,8 +47,8 @@
         <div class="hero-content">
           <h1 class="logo">PANZZi</h1>
           <div class="hero-slogan">
-            <h2>Информация для клиентов</h2>
-            <div class="slogan-description">
+            <h2 data-translate="clients-title">Информация для клиентов</h2>
+            <div class="slogan-description" data-translate="clients-subtitle">
               Специальные условия и программы сотрудничества для профессионалов
             </div>
           </div>
@@ -59,21 +62,21 @@
     <!-- Clients Section -->
     <section class="clients-info">
       <div class="container">
-        <span class="section-subtitle text-center">Сотрудничество</span>
-        <h2 class="section-title text-center">Условия для клиентов</h2>
+        <span class="section-subtitle text-center" data-translate="clients-cooperation">Сотрудничество</span>
+        <h2 class="section-title text-center" data-translate="clients-conditions">Условия для клиентов</h2>
 
         <div class="cta-box animate fade-in delay-5">
           <div class="cta-content">
-            <p>
+            <p data-translate="clients-intro-1">
               Мы готовы сотрудничать как с частными покупателями, так и с
               профессионалами: дизайнерами, рестораторами, застройщиками.
             </p>
-            <p>
+            <p data-translate="clients-intro-2">
               Мы поможем вам с комплектацией гостиниц, курортов,
               торгово-развлекательных центров, офисов, баров, лофт пространств,
               ресторанов, магазинов и салонов под ключ.
             </p>
-            <p>
+            <p data-translate="clients-intro-3">
               Также если вас интересует что-то одно, например только посуда или
               освещение, мы с радостью вам поможем!
             </p>
@@ -86,14 +89,14 @@
             <div class="category-icon">
               <i class="fas fa-pencil-ruler"></i>
             </div>
-            <h3>Для дизайнеров</h3>
+            <h3 data-translate="client-category-designers">Для дизайнеров</h3>
             <ul class="category-benefits">
               <li>
-                <i class="fas fa-check"></i> Специальные цены на оптовые заказы
+                <i class="fas fa-check"></i> <span data-translate="benefit-wholesale">Специальные цены на оптовые заказы</span>
               </li>
-              <li><i class="fas fa-check"></i> Бесплатные 3D-модели мебели</li>
-              <li><i class="fas fa-check"></i> Персональный менеджер</li>
-              <li><i class="fas fa-check"></i> Доступ к закрытому каталогу</li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-3d">Бесплатные 3D-модели мебели</span></li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-manager">Персональный менеджер</span></li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-catalog">Доступ к закрытому каталогу</span></li>
             </ul>
           </div>
 
@@ -102,17 +105,16 @@
             <div class="category-icon">
               <i class="fas fa-utensils"></i>
             </div>
-            <h3>Для рестораторов</h3>
+            <h3 data-translate="client-category-restaurateurs">Для рестораторов</h3>
             <ul class="category-benefits">
               <li>
-                <i class="fas fa-check"></i> Комплексное оснащение под ключ
+                <i class="fas fa-check"></i> <span data-translate="benefit-turnkey">Комплексное оснащение под ключ</span>
               </li>
               <li>
-                <i class="fas fa-check"></i> Готовые решения для разных
-                концепций
+                <i class="fas fa-check"></i> <span data-translate="benefit-solutions">Готовые решения для разных концепций</span>
               </li>
-              <li><i class="fas fa-check"></i> Постгарантийное обслуживание</li>
-              <li><i class="fas fa-check"></i> Логистика "под ключ"</li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-service">Постгарантийное обслуживание</span></li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-logistics">Логистика "под ключ"</span></li>
             </ul>
           </div>
 
@@ -121,16 +123,16 @@
             <div class="category-icon">
               <i class="fas fa-hotel"></i>
             </div>
-            <h3>Для отельеров</h3>
+            <h3 data-translate="client-category-hoteliers">Для отельеров</h3>
             <ul class="category-benefits">
-              <li><i class="fas fa-check"></i> Типовые решения для номеров</li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-rooms">Типовые решения для номеров</span></li>
               <li>
-                <i class="fas fa-check"></i> Спецпредложения на крупные заказы
+                <i class="fas fa-check"></i> <span data-translate="benefit-offers">Спецпредложения на крупные заказы</span>
               </li>
               <li>
-                <i class="fas fa-check"></i> Разработка индивидуальных проектов
+                <i class="fas fa-check"></i> <span data-translate="benefit-custom">Разработка индивидуальных проектов</span>
               </li>
-              <li><i class="fas fa-check"></i> Поэтапная поставка</li>
+              <li><i class="fas fa-check"></i> <span data-translate="benefit-phased">Поэтапная поставка</span></li>
             </ul>
           </div>
         </div>
@@ -140,22 +142,23 @@
             <img
               src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
               alt="Наш офис"
+              data-translate-alt="office-image-alt"
             />
           </div>
           <div class="office-info">
-            <h3>Наш офис в Шанхае</h3>
-            <p>
+            <h3 data-translate="office-title">Наш офис в Шанхае</h3>
+            <p data-translate="office-description">
               Для клиентов, которым важно увидеть, оценить, прикоснуться,
               пообщаться лично у нас есть офис в Шанхае.
             </p>
             <div class="office-contacts">
               <p>
-                <i class="fas fa-map-marker-alt"></i> 上海市浦东新区张杨路500号
+                <i class="fas fa-map-marker-alt"></i> <span data-translate="office-address">上海市浦东新区张杨路500号</span>
               </p>
               <p><i class="fas fa-phone-alt"></i> +86 21 5879 1234</p>
-              <p><i class="fas fa-clock"></i> Пн-Пт: 9:00-18:00</p>
+              <p><i class="fas fa-clock"></i> <span data-translate="office-hours">Пн-Пт: 9:00-18:00</span></p>
             </div>
-            <a href="#contacts" class="btn">Записаться на встречу</a>
+            <a href="#contacts" class="btn" data-translate="office-appointment">Записаться на встречу</a>
           </div>
         </div>
       </div>
@@ -166,44 +169,46 @@
         <div class="footer-content">
           <div class="footer-about">
             <div class="footer-logo">PANZZi</div>
-            <p>
+            <p data-translate="footer-about">
               Оснащение ресторанов, кафе, магазинов, отелей, вилл, частных
               домов, поставка стройматериалов из Китая под ключ.
             </p>
           </div>
 
           <div class="footer-links">
-            <h3>Навигация</h3>
+            <h3 data-translate="footer-navigation">Навигация</h3>
             <ul>
-              <li><a href="index.html#home">Главная</a></li>
-              <li><a href="index.html#about">О компании</a></li>
-              <li><a href="index.html#services">Услуги</a></li>
-              <li><a href="index.html#projects">Проекты</a></li>
-              <li><a href="index.html#why-choose-us">Почему мы</a></li>
-              <li><a href="index.html#contacts">Контакты</a></li>
+              <li><a href="index.html#home" data-translate="nav-home">Главная</a></li>
+              <li><a href="index.html#about" data-translate="nav-about">О компании</a></li>
+              <li><a href="index.html#services" data-translate="nav-services">Услуги</a></li>
+              <li><a href="index.html#projects" data-translate="nav-projects">Проекты</a></li>
+              <li><a href="index.html#why-choose-us" data-translate="nav-why-us">Почему мы</a></li>
+              <li><a href="index.html#contacts" data-translate="nav-contacts">Контакты</a></li>
             </ul>
           </div>
 
           <div class="footer-links">
-            <h3>Сотрудничество</h3>
+            <h3 data-translate="footer-cooperation">Сотрудничество</h3>
             <ul>
-              <li><a href="clients.html">Для клиентов</a></li>
+              <li><a href="clients.html" data-translate="footer-for-clients">Для клиентов</a></li>
             </ul>
           </div>
 
           <div class="footer-contact">
-            <h3>Контакты</h3>
-            <p><i class="fas fa-map-marker-alt"></i> Китай, Гуанчжоу</p>
+            <h3 data-translate="footer-contacts">Контакты</h3>
+            <p><i class="fas fa-map-marker-alt"></i> <span data-translate="footer-address">Китай, Гуанчжоу</span></p>
             <p><i class="fas fa-phone-alt"></i> +7 (XXX) XXX-XX-XX</p>
             <p><i class="fas fa-envelope"></i> your@email.com</p>
           </div>
         </div>
         <div class="footer-bottom">
-          <p>© 2025 PANZZi. Все права защищены.</p>
+          <p data-translate="footer-rights">© 2025 PANZZi. Все права защищены.</p>
         </div>
       </div>
     </footer>
 
     <script src="js/scripts.js"></script>
+    <script src="js/translations.js"></script>
+    <script src="js/translations_scripts.js"></script>
   </body>
 </html>
