--- a/clients.html
+++ b/clients.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title data-translate="clients-page-title">PANZZi - Информация для клиентов</title>
+    <title data-translate="clients-page-title">PANZZi</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="content/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="content/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="content/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="content/favicon/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="content/favicon/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,9 +31,9 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-        <div class="language-switcher">
-  <button id="language-toggle" class="lang-btn" data-lang="ru">EN</button>
-</div>
+    <div class="language-switcher">
+      <button id="language-toggle" class="lang-btn" data-lang="ru">EN</button>
+    </div>
     <!-- Hero Section -->
     <section class="hero clients-hero">
       <div class="hero-slider">
@@ -62,8 +76,17 @@
     <!-- Clients Section -->
     <section class="clients-info">
       <div class="container">
-        <span class="section-subtitle text-center" data-translate="clients-cooperation">Сотрудничество</span>
-        <h2 class="section-title text-center" data-translate="clients-conditions">Условия для клиентов</h2>
+        <span
+          class="section-subtitle text-center"
+          data-translate="clients-cooperation"
+          >Сотрудничество</span
+        >
+        <h2
+          class="section-title text-center"
+          data-translate="clients-conditions"
+        >
+          Условия для клиентов
+        </h2>
 
         <div class="cta-box animate fade-in delay-5">
           <div class="cta-content">
@@ -92,11 +115,29 @@
             <h3 data-translate="client-category-designers">Для дизайнеров</h3>
             <ul class="category-benefits">
               <li>
-                <i class="fas fa-check"></i> <span data-translate="benefit-wholesale">Специальные цены на оптовые заказы</span>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-wholesale"
+                  >Специальные цены на оптовые заказы</span
+                >
               </li>
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-3d">Бесплатные 3D-модели мебели</span></li>
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-manager">Персональный менеджер</span></li>
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-catalog">Доступ к закрытому каталогу</span></li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-3d"
+                  >Бесплатные 3D-модели мебели</span
+                >
+              </li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-manager"
+                  >Персональный менеджер</span
+                >
+              </li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-catalog"
+                  >Доступ к закрытому каталогу</span
+                >
+              </li>
             </ul>
           </div>
 
@@ -105,16 +146,34 @@
             <div class="category-icon">
               <i class="fas fa-utensils"></i>
             </div>
-            <h3 data-translate="client-category-restaurateurs">Для рестораторов</h3>
+            <h3 data-translate="client-category-restaurateurs">
+              Для рестораторов
+            </h3>
             <ul class="category-benefits">
               <li>
-                <i class="fas fa-check"></i> <span data-translate="benefit-turnkey">Комплексное оснащение под ключ</span>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-turnkey"
+                  >Комплексное оснащение под ключ</span
+                >
               </li>
               <li>
-                <i class="fas fa-check"></i> <span data-translate="benefit-solutions">Готовые решения для разных концепций</span>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-solutions"
+                  >Готовые решения для разных концепций</span
+                >
               </li>
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-service">Постгарантийное обслуживание</span></li>
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-logistics">Логистика "под ключ"</span></li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-service"
+                  >Постгарантийное обслуживание</span
+                >
+              </li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-logistics"
+                  >Логистика "под ключ"</span
+                >
+              </li>
             </ul>
           </div>
 
@@ -125,14 +184,28 @@
             </div>
             <h3 data-translate="client-category-hoteliers">Для отельеров</h3>
             <ul class="category-benefits">
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-rooms">Типовые решения для номеров</span></li>
               <li>
-                <i class="fas fa-check"></i> <span data-translate="benefit-offers">Спецпредложения на крупные заказы</span>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-rooms"
+                  >Типовые решения для номеров</span
+                >
               </li>
               <li>
-                <i class="fas fa-check"></i> <span data-translate="benefit-custom">Разработка индивидуальных проектов</span>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-offers"
+                  >Спецпредложения на крупные заказы</span
+                >
               </li>
-              <li><i class="fas fa-check"></i> <span data-translate="benefit-phased">Поэтапная поставка</span></li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-custom"
+                  >Разработка индивидуальных проектов</span
+                >
+              </li>
+              <li>
+                <i class="fas fa-check"></i>
+                <span data-translate="benefit-phased">Поэтапная поставка</span>
+              </li>
             </ul>
           </div>
         </div>
@@ -153,12 +226,20 @@
             </p>
             <div class="office-contacts">
               <p>
-                <i class="fas fa-map-marker-alt"></i> <span data-translate="office-address">上海市浦东新区张杨路500号</span>
+                <i class="fas fa-map-marker-alt"></i>
+                <span data-translate="office-address"
+                  >上海市浦东新区张杨路500号</span
+                >
               </p>
               <p><i class="fas fa-phone-alt"></i> +86 21 5879 1234</p>
-              <p><i class="fas fa-clock"></i> <span data-translate="office-hours">Пн-Пт: 9:00-18:00</span></p>
+              <p>
+                <i class="fas fa-clock"></i>
+                <span data-translate="office-hours">Пн-Пт: 9:00-18:00</span>
+              </p>
             </div>
-            <a href="#contacts" class="btn" data-translate="office-appointment">Записаться на встречу</a>
+            <a href="#contacts" class="btn" data-translate="office-appointment"
+              >Записаться на встречу</a
+            >
           </div>
         </div>
       </div>
@@ -178,31 +259,62 @@
           <div class="footer-links">
             <h3 data-translate="footer-navigation">Навигация</h3>
             <ul>
-              <li><a href="index.html#home" data-translate="nav-home">Главная</a></li>
-              <li><a href="index.html#about" data-translate="nav-about">О компании</a></li>
-              <li><a href="index.html#services" data-translate="nav-services">Услуги</a></li>
-              <li><a href="index.html#projects" data-translate="nav-projects">Проекты</a></li>
-              <li><a href="index.html#why-choose-us" data-translate="nav-why-us">Почему мы</a></li>
-              <li><a href="index.html#contacts" data-translate="nav-contacts">Контакты</a></li>
+              <li>
+                <a href="index.html#home" data-translate="nav-home">Главная</a>
+              </li>
+              <li>
+                <a href="index.html#about" data-translate="nav-about"
+                  >О компании</a
+                >
+              </li>
+              <li>
+                <a href="index.html#services" data-translate="nav-services"
+                  >Услуги</a
+                >
+              </li>
+              <li>
+                <a href="index.html#projects" data-translate="nav-projects"
+                  >Проекты</a
+                >
+              </li>
+              <li>
+                <a href="index.html#why-choose-us" data-translate="nav-why-us"
+                  >Почему мы</a
+                >
+              </li>
+              <li>
+                <a href="index.html#contacts" data-translate="nav-contacts"
+                  >Контакты</a
+                >
+              </li>
             </ul>
           </div>
 
           <div class="footer-links">
             <h3 data-translate="footer-cooperation">Сотрудничество</h3>
             <ul>
-              <li><a href="clients.html" data-translate="footer-for-clients">Для клиентов</a></li>
+              <li>
+                <a href="clients.html" data-translate="footer-for-clients"
+                  >Для клиентов</a
+                >
+              </li>
             </ul>
           </div>
 
           <div class="footer-contact">
             <h3 data-translate="footer-contacts">Контакты</h3>
-            <p><i class="fas fa-map-marker-alt"></i> <span data-translate="footer-address">Китай, Гуанчжоу</span></p>
+            <p>
+              <i class="fas fa-map-marker-alt"></i>
+              <span data-translate="footer-address">Китай, Гуанчжоу</span>
+            </p>
             <p><i class="fas fa-phone-alt"></i> +7 (XXX) XXX-XX-XX</p>
             <p><i class="fas fa-envelope"></i> your@email.com</p>
           </div>
         </div>
         <div class="footer-bottom">
-          <p data-translate="footer-rights">© 2025 PANZZi. Все права защищены.</p>
+          <p data-translate="footer-rights">
+            © 2025 PANZZi. Все права защищены.
+          </p>
         </div>
       </div>
     </footer>
