--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
               <div class="contact-icon"><i class="fab fa-whatsapp"></i></div>
               <h3 class="contact-title" data-translate="whatsapp">WhatsApp</h3>
               <a
-                href="https://wa.me/yournumber"
+                href="https://wa.me/+8618721722664"
                 class="contact-link"
                 data-translate="write-us"
                 >Написать</a
@@ -615,7 +615,7 @@
               <div class="contact-icon"><i class="fab fa-telegram"></i></div>
               <h3 class="contact-title" data-translate="telegram">Telegram</h3>
               <a
-                href="https://t.me/yourusername"
+                href="https://t.me/cxzczxczxc_bot"
                 class="contact-link"
                 data-translate="write-us"
                 >Написать</a
@@ -634,7 +634,7 @@
             <div class="contact-item">
               <div class="contact-icon"><i class="fab fa-weixin"></i></div>
               <h3 class="contact-title">WeChat</h3>
-              <a href="#" class="contact-link" data-translate="scan-qr"
+              <a href="#" class="contact-link" data-gallery="wechat" data-translate="scan-qr"
                 >Отсканируйте</a
               >
             </div>
@@ -694,7 +694,7 @@
               <i class="fas fa-map-marker-alt"></i>
               <span data-translate="footer-address">Китай, Гуанчжоу</span>
             </p>
-            <p><i class="fas fa-phone-alt"></i> +7 (XXX) XXX-XX-XX</p>
+            <p><i class="fas fa-phone-alt"></i>+8618721722664</p>
             <p><i class="fas fa-envelope"></i> your@email.com</p>
           </div>
         </div>
