--- a/clients.html
+++ b/clients.html
@@ -221,7 +221,7 @@
                 <span data-translate="office-hours">Пн-Пт: 9:00-18:00</span>
               </p>
             </div>
-            <a href="#contacts" class="btn" data-translate="office-appointment"
+            <a href="index.html#contacts" class="btn" data-translate="office-appointment"
               >Записаться на встречу</a
             >
           </div>
@@ -291,8 +291,8 @@
               <i class="fas fa-map-marker-alt"></i>
               <span data-translate="footer-address">Китай, Гуанчжоу</span>
             </p>
-            <p><i class="fas fa-phone-alt"></i> +7 (XXX) XXX-XX-XX</p>
-            <p><i class="fas fa-envelope"></i> your@email.com</p>
+            <p><i class="fas fa-phone-alt"></i>+86 21 5879 1234</p>
+            <p><i class="fas fa-envelope"></i>Panzzi.sha@gmail.com</p>
           </div>
         </div>
         <div class="footer-bottom">
