--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="supported-languages" content="ru, en" />
     <title data-translate="page-title">PANZZi</title>
-    <link rel="icon" type="image/png" href="content/favicon/favicon-96x96.png" sizes="96x96" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="content/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
     <link rel="icon" type="image/svg+xml" href="content/favicon/favicon.svg" />
     <link rel="shortcut icon" href="content/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="content/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="content/favicon/apple-touch-icon.png"
+    />
     <link rel="manifest" href="content/favicon/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,18 +84,22 @@
             </div>
           </div>
           <div class="hero-buttons">
-            <a href="https://wa.me/yournumber" class="btn"
+            <a href="https://wa.me/+8618721722664" class="btn"
               ><i class="fab fa-whatsapp"></i>
               <span data-translate="whatsapp">WhatsApp</span></a
             >
-            <a href="https://t.me/yourusername" class="btn btn-outline"
+            <a href="https://t.me/Panzzi_bot" class="btn btn-outline"
               ><i class="fab fa-telegram"></i>
               <span data-translate="telegram">Telegram</span></a
             >
           </div>
           <div class="social-links">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:your@email.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://instagram.com/panzzi_furniture"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="mailto:Panzzi.sha@gmail.com"
+              ><i class="fas fa-envelope"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -601,6 +614,16 @@
           </p>
 
           <div class="contact-methods">
+                        <div class="contact-item">
+              <div class="contact-icon"><i class="fab fa-vk"></i></div>
+              <h3 class="contact-title" data-translate="vk">Vk</h3>
+              <a
+                href="https://vk.com/club231583657"
+                class="contact-link"
+                data-translate="write-us"
+                >Написать</a
+              >
+            </div>
             <div class="contact-item">
               <div class="contact-icon"><i class="fab fa-whatsapp"></i></div>
               <h3 class="contact-title" data-translate="whatsapp">WhatsApp</h3>
@@ -615,7 +638,7 @@
               <div class="contact-icon"><i class="fab fa-telegram"></i></div>
               <h3 class="contact-title" data-translate="telegram">Telegram</h3>
               <a
-                href="https://t.me/cxzczxczxc_bot"
+                href="https://t.me/Panzzi_bot"
                 class="contact-link"
                 data-translate="write-us"
                 >Написать</a
@@ -625,7 +648,7 @@
               <div class="contact-icon"><i class="fab fa-instagram"></i></div>
               <h3 class="contact-title">Instagram</h3>
               <a
-                href="https://instagram.com/yourprofile"
+                href="https://instagram.com/panzzi_furniture"
                 class="contact-link"
                 data-translate="contact-instagram"
                 >@yourprofile</a
@@ -634,7 +657,11 @@
             <div class="contact-item">
               <div class="contact-icon"><i class="fab fa-weixin"></i></div>
               <h3 class="contact-title">WeChat</h3>
-              <a href="#" class="contact-link" data-gallery="wechat" data-translate="scan-qr"
+              <a
+                href="#"
+                class="contact-link"
+                data-gallery="wechat"
+                data-translate="scan-qr"
                 >Отсканируйте</a
               >
             </div>
@@ -694,8 +721,8 @@
               <i class="fas fa-map-marker-alt"></i>
               <span data-translate="footer-address">Китай, Гуанчжоу</span>
             </p>
-            <p><i class="fas fa-phone-alt"></i>+8618721722664</p>
-            <p><i class="fas fa-envelope"></i> your@email.com</p>
+            <p><i class="fas fa-phone-alt"></i>+86 21 5879 1234</p>
+            <p><i class="fas fa-envelope"></i> Panzzi.sha@gmail.com</p>
           </div>
         </div>
         <div class="footer-bottom">
