--- a/clients.html
+++ b/clients.html
@@ -212,7 +212,7 @@
               <p>
                 <i class="fas fa-map-marker-alt"></i>
                 <span data-translate="office-address"
-                  >上海市浦东新区张杨路500号</span
+                  >Office 107, Building 8, No. 50 Moganshan Road, Putuo District, Shanghai 158 2174 4928</span
                 >
               </p>
               <p><i class="fas fa-phone-alt"></i> +86 21 5879 1234</p>
@@ -289,7 +289,7 @@
             <h3 data-translate="footer-contacts">Контакты</h3>
             <p>
               <i class="fas fa-map-marker-alt"></i>
-              <span data-translate="footer-address">Китай, Гуанчжоу</span>
+              <span data-translate="footer-address">Office 107, Building 8, No. 50 Moganshan Road, Putuo District, Shanghai 158 2174 4928</span>
             </p>
             <p><i class="fas fa-phone-alt"></i>+86 21 5879 1234</p>
             <p><i class="fas fa-envelope"></i>Panzzi.sha@gmail.com</p>
