--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <h3 data-translate="footer-contacts">Контакты</h3>
             <p>
               <i class="fas fa-map-marker-alt"></i>
-              <span data-translate="footer-address">Китай, Гуанчжоу</span>
+              <span data-translate="footer-address">Office 107, Building 8, No. 50 Moganshan Road, Putuo District, Shanghai 158 2174 4928</span>
             </p>
             <p><i class="fas fa-phone-alt"></i>+86 21 5879 1234</p>
             <p><i class="fas fa-envelope"></i> Panzzi.sha@gmail.com</p>
